cleaned up UI and squashed bugs

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -80,14 +80,12 @@ body, .root {
   z-index: 2;
   position: relative;
   width: 375px;
-  height: 375px;
+  min-height: 375px;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  background: #ECE9E6;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #FFFFFF, #ECE9E6);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #FFFFFF, #ECE9E6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #222f3e;;  /* fallback for old browsers */
   border-radius: 30px;
   transition-duration: 0.2s;
 }
@@ -98,6 +96,7 @@ form{
   position: relative;
   width: 100%;
   height: 100%;
+  min-height: 375px;
   justify-content: center;
   align-items: center;
   flex-direction: column;
@@ -109,7 +108,7 @@ form{
 form > h2 {
   text-align: center;
   width: 100%;
-  color: #131313;
+  color: rgb(var(--pure-material-onprimary-rgb, 255, 255, 255));
   margin: 15px auto;
   font-family: 'Roboto', sans-serif;
   font-weight: 600;
@@ -120,7 +119,7 @@ form > h2 {
 }
 
 form > h2 > .button-space {
-  color: #222f3e;
+  color: rgb(var(--pure-material-onprimary-rgb, 255, 255, 255));
   margin-right: 5px;
 }
 
@@ -129,6 +128,7 @@ form > div:nth-child(2) {
   width: 90%;
   height: 20%;
   margin: 0 auto;
+  margin-bottom: 7px;
 }
 
 form > div:nth-child(3){
@@ -139,6 +139,7 @@ form > div:nth-child(3){
 }
 
 .my-input{
+  color: rgb(var(--pure-material-onprimary-rgb, 255, 255, 255));
   position: relative;
   z-index: 3;
   text-align: left;
@@ -152,12 +153,13 @@ form > div:nth-child(3){
   background-color: rgba(131, 149, 167,0.2)
 }
 .my-input:focus{
+  color: rgb(var(--pure-material-onprimary-rgb, 255, 255, 255));
   background-color: rgba(131, 149, 167,0.0)
 }
 
 .input-label{
   text-align: left;
-  color: grey;
+  color: #dfe4ea;
   font-size: 14px;
   margin-bottom: 5px;
 }
@@ -343,16 +345,15 @@ Audio {
     text-align: center;
     text-overflow: ellipsis;
     color: rgb(var(--pure-material-onprimary-rgb, 255, 255, 255));
+    color: rgba(0, 0, 0, 0.87);
     background-color: #36A1E5;
-    box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
     font-family: 'Noto Sans JP', sans-serif;
     font-size: 14px;
     font-weight: 600;
     line-height: 36px;
     overflow: hidden;
     outline: none;
-    cursor: pointer;
-    transition: box-shadow 0.2s;
+    transition: all 0.2s;
 }
 
 .my-btn::-moz-focus-inner {
@@ -392,6 +393,7 @@ Audio {
 .my-btn:hover,
 .my-btn:focus {
     box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12);
+    background-color: #90caf9;
 }
 
 .my-btn:hover::before {
@@ -431,4 +433,9 @@ Audio {
 
 .my-btn:disabled::after {
     opacity: 0;
+}
+
+.dl-btn{
+  position: relative !important;
+  margin: 15px !important;
 }
